--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,10 +5,6 @@ spring:
     password: '0000'
     driver-class-name: com.mysql.cj.jdbc.Driver
 
-  devtools:
-    restart:
-      enabled: true
-
   thymeleaf:
     cache: false
     prefix: classpath:/templates/
@@ -18,16 +14,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
+      ddl-auto: none
 
 server:
   port: 8080
-
-logging:
-  level:
-    org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
