--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/fashion_log
     username: root
-    password: '0000'
+    password: 'projectpassword'
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   thymeleaf:
